[gd_scene load_steps=7 format=1]

[ext_resource path="res://scripts/inventory.gd" type="Script" id=1]
[ext_resource path="res://scripts/pointer.gd" type="Script" id=2]
[ext_resource path="res://textures/pointer-highlight.tex" type="Texture" id=3]
[ext_resource path="res://textures/key.tex" type="Texture" id=4]
[ext_resource path="res://scripts/key.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 94.3473, 45.7426 )

[node name="Game" type="Node"]

[node name="Inventory" type="Node" parent="."]

script/script = ExtResource( 1 )

[node name="Collector" type="Node" parent="Inventory"]

[node name="Pointer" type="Node2D" parent="."]

transform/pos = Vector2( 100, -100 )
script/script = ExtResource( 2 )

[node name="PointerHighlightSprite" type="Sprite" parent="Pointer"]

z/z = 100
texture = ExtResource( 3 )
modulate = Color( 0.785156, 0.450851, 0.450851, 1 )

[node name="KeySprite" type="Sprite" parent="."]

transform/pos = Vector2( 255.195, 415.832 )
texture = ExtResource( 4 )
script/script = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="KeySprite"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="KeySprite/Area2D"]

shape = SubResource( 1 )
trigger = true
_update_shape_index = 0

[node name="KeySprite1" type="Sprite" parent="."]

transform/pos = Vector2( 644.141, 415.832 )
texture = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="KeySprite1"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="KeySprite1/Area2D"]

shape = SubResource( 1 )
trigger = true
_update_shape_index = 0

[connection signal="input_event" from="KeySprite/Area2D" to="KeySprite" method="_on_Area2D_input_event" flags=6]

[connection signal="mouse_enter" from="KeySprite/Area2D" to="Pointer" method="_on_Area2D_mouse_enter"]

[connection signal="mouse_exit" from="KeySprite/Area2D" to="Pointer" method="_on_Area2D_mouse_exit"]

[connection signal="mouse_enter" from="KeySprite1/Area2D" to="Pointer" method="_on_Area2D_mouse_enter"]

[connection signal="mouse_exit" from="KeySprite1/Area2D" to="Pointer" method="_on_Area2D_mouse_exit"]


